# Dark-web-Agentic-Crawler

./: .gitignore  PHASE_0_CHECKLIST.md  PHASE_1_CHECKLIST.md  PHASE_1_COMPLETE.md  PHASE_3_CHECKLIST.md  README.md  action_plan.md  dark_web_threat_intelligence_agent_project.json  pyproject.toml  pytest.ini  requirements.txt
docs/: DATA_SCHEMAS.md  ORCHESTRATION_FRAMEWORK_DECISION.md  SERVICE_BOUNDARIES.md
src/: __init__.py
src/agents/: interfaces.py
src/config/: config.py
src/models/: schemas.py
src/orchestrator/: graph.py  orchestrator.py
src/services/: __init__.py  audit.py  base.py  crawler.py  job_tracker.py  parser.py
tests/: test_crawler_readonly.py  test_crawler_service.py  test_orchestrator_integration.py  test_parser_service.py
